[gd_scene load_steps=2 format=3 uid="uid://cvd5bhsux86o1"]

[ext_resource type="Script" path="res://scripts/MapGame.gd" id="1_wdwfk"]

[node name="MapGame" type="Node2D"]
script = ExtResource("1_wdwfk")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 2
offset_top = 2.0
offset_right = 1149.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MoveToolButton" type="Button" parent="UI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Move Tool"

[node name="ConnectTermsToolButton" type="Button" parent="UI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect Tool"

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/HBoxContainer/MoveToolButton" to="." method="_on_move_tool_button_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/HBoxContainer/ConnectTermsToolButton" to="." method="_on_connect_terms_tool_button_pressed"]
